@@ -1,6 +1,6 @@
 /*
  * aasin.h
- * The basic idea is to exploit Pade polynomials.
+ * The basic idea is to exploit Pade' polynomials.
  * A lot of ideas were inspired by the cephes math library (by Stephen L. Moshier
  * moshier@na-net.ornl.gov) as well as actual code. 
  * The Cephes library can be found here:  http://www.netlib.org/cephes/
